tests/semantic_errors/err01_const_assign.java
public class Error01 {
    public static void main(String[] args) {
        final int x;
        x = 10;
        x = 20; // Error: Cannot assign to constant variable
    }
}
